[package]
name = "python_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
antlr4rust = "0.5"
antlr_python_tool_call_parser = { path = "../antlr_python" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "../../../runtime/components/tool_use/rust/python_parser.rs"
